--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add data/sixMan_odds_*.csv
-          git diff --cached --quiet || git commit -m "Auto-update: roy odds"
+          git diff --cached --quiet || git commit -m "Auto-update: soy odds"
         shell: bash
 
       - name: Push changes
